# tsbuddy

./: .gitignore  .pyproject.toml  CHANGELOG.md  ConsoleLogsParsed.csv  README.md  __main__.py  clean_pycache.py  pyproject.toml  setup.py  swlog_chassis1  swlog_chassis1.0  swlog_chassis1.1  swlog_chassis1.2  swlog_chassis1.3  swlog_chassis1.4  swlog_chassis1.5  swlog_chassis1.6  swlog_failure_reboot_log  swlog_localConsole  swlog_localConsole.0  swlog_localbackConsole.1  swlog_localbackconsole  tsbuddy.py
src/: LogParser.py  __init__.py  clean_pycache.py  gather_techsupport.py  get_techsupport.py  loganalyzer-reboots.py  logparser-v2.py  logparser.py  logparser_v2.py  tsbuddy_menu.py  tsbuddy_version.py
src/analyze/: graph_hmon.py
src/aosdl/: README.md  aosdl.py
src/convert/: ReadMe-tcpdumpreader
src/extracttar/: README.md  extract-all.py  extracttar.py
src/tsbuddy/: __init__.py  get_techsupport.py  tsbuddy_menu.py
src/tsbuddy/aos/: aosdl.py  ga_index.json  ga_latest.json
src/tsbuddy/extract/: __init__.py
src/tsbuddy/extracttar/: extract_ts_tar.py
src/tsbuddy/log_analyzer/: __init__.py  loglist-master.csv  loglist-reboots.csv  logparser_v2-x86.py  logparser_v2.py  logparser_v3.py
src/tsbuddy/utils/: ale_auth.py  clean_pycache.py  tsbuddy_version.py
src/tsbuddy/utils/tcpdumpreader/: tcpdumpreader.py
tsbuddy/: __init__.py  tsbuddy.py
tsbuddy/aosdl/: README.md
