[tool.poetry]
name = "tsbuddy"
version = "0.0.1"
description = "Tech Support Buddy is a versatile Python module built to empower developers and IT professionals in resolving technical issues. It provides a suite of Python functions designed to efficiently diagnose and resolve technical issues by parsing raw text into structured data, enabling automation and data-driven decision-making."
#authors = ["Your Name <your.email@example.com>"]
#license = "MIT"
readme = "README.md"
homepage = "https://github.com/bgbyte/tsbuddy"
repository = "https://github.com/bgbyte/tsbuddy"
keywords = ["tsbuddy", "Tech Support Buddy"]

[tool.poetry.dependencies]
python = "^3.8"

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tsbuddy"
version = "0.0.1"
#authors = [
#  { name="Example Author", email="author@example.com" },
#]
description = "Tech Support Buddy is a versatile Python module built to empower developers and IT professionals in resolving technical issues. It provides a suite of Python functions designed to efficiently diagnose and resolve technical issues by parsing raw text into structured data, enabling automation and data-driven decision-making."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bgbyte/tsbuddy"
Issues = "https://github.com/bgbyte/tsbuddy/issues"
